# p2p_chat

./: CMakeLists.txt  LICENSE  main.cpp  p2p_chat
config/: CMakeLists.txt  config.cpp  config.hpp
core/: CMakeLists.txt  app.cpp  app.hpp  logger.cpp  logger.hpp  portable_time.hpp
lang/: CMakeLists.txt  en_US.lang  lang_manager.cpp  lang_manager.hpp
tests/: logger_test.cpp
